--- a/key-management/package.json
+++ b/key-management/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "keycloak-js": "^9.0.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
