--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -18,3 +18,10 @@ server:
     key-store-password: 2secure4u
     key-alias: enigmabackoffice
     key-store: classpath:enigmabackoffice.p12
+
+keycloak:
+  auth-server-url: http://localhost:8082/auth
+  realm: enigma
+  resource: enigma-engine
+  ssl-required: external
+  bearer-only: true
